--- a/ScripturesApi/wwwroot/index.html
+++ b/ScripturesApi/wwwroot/index.html
@@ -36,10 +36,10 @@
                     </a>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-sm-4">
                 <div class="card mb-4 rounded-3 shadow-sm">
                     <div class="card-header py-3">
-                        <h4 class="my-0 fw-normal">
+                        <h4 class="my-0 fw-normal text-nowrap">
                             Coming Soon<span style="color: #80808033">?</span>
                         </h4>
                     </div>
@@ -64,6 +64,11 @@
                         and download the Postman collection.
                     </p>
                     <ul class="icon-list ps-0">
+                        <li class="d-flex align-items-start mb-1">
+                            <a href="https://github.com/thorkdev/ScripturesApi" target="_blank">
+                                Github Repository
+                            </a>
+                        </li>
                         <li class="d-flex align-items-start mb-1">
                             <a href="swagger/index.html">
                                 Swagger Documentation
